# kotofetchAdditive

./: Cargo.toml  DEV_NOTE.md  LICENSE  PKGBUILD  README.md  config.toml  default.nix
.github/workflows/: ci.yml  release.yml
quotes/: anime.toml  gundam.toml  haiku.toml  lyrics.toml  proverb.toml  proverbs.toml  yojijukugo.toml
src/: cli.rs  config.rs  display.rs  main.rs  quotes.rs
