[package]
name = "kotofetch"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
clap = { version = "4.5.47", features = ["derive"] }
console = "0.16.1"
dirs = "6.0.0"
rand = "0.9.2"
serde = { version = "1.0.219", features = ["derive"] }
textwrap = "0.16.2"
toml = "0.9.5"
unicode-width = "0.2.1"
